@@ -1,3 +1,8 @@
+Apr 06 2003  2.9.1  Merged panelfront_display patch from Faust:
+                     Tweaks to elapsed time display
+                     Changed status panel scrolling
+                     Changed text dump panel scrolling
+                     Added percent-scrolled to scrolling panels
 Apr 04 2003  2.9.1  Fixed silly error in drone tcpstreamer
 Apr 03 2003  2.9.1  Revamped core timer logic to be MUCH more efficient,
                      especially with large numbers of timers.
